Fixed column alignments, consistency issues, pull-quote styles and mobile view.

--- a/sass/inner.scss
+++ b/sass/inner.scss
@@ -58,6 +58,18 @@
     }
   }
 
+  .left {
+    &-box {
+      padding-top: 1%;
+    }
+  }
+
+  .center {
+    &-wrapper {
+      max-width: 80%;
+    }
+  }
+
   .byline {
     &-box {
       text-align: left;
@@ -65,7 +77,7 @@
       padding-top: 1%;
       & p{
         line-height: 1em;
-        margin: 0; 
+        margin: 0;
       }
     }
   }
@@ -90,7 +102,7 @@
     &-item {
       &-head {
         & p {
-          margin: 0;
+          margin: 0 !important;
         }
       }
     }
@@ -107,27 +119,37 @@
   .pull {
     &-quote {
       color: $block-quote;
+      font-size: 20pt;
+      text-transform: none;
       &-box {
         padding-bottom: 3%;
       }
     }
   }
+}
 
-  @media only screen and (max-width: 766px) {
-    .byline {
-      &-box {
-        text-align: center;
-      }
+@media only screen and (max-width: 766px) {
+  .text {
+    &-row {
+      max-width: 90%;
+      margin: 0 auto;
     }
+  }
 
-    .byline {
-      &-item {
-        text-align: center;
-      }
+  .byline {
+    &-box {
+      text-align: center;
+    }
+  }
+
+  .byline {
+    &-item {
+      text-align: center !important;
     }
   }
 
 }
+
 
 #morphing {
   position: absolute;
